[Fix] Fix UI and Add UI JS and CSS with needed Files

--- a/Sadad/UI/Views/Home/Index.cshtml
+++ b/Sadad/UI/Views/Home/Index.cshtml
@@ -1,8 +1,328 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "فرم ثبت سفارشات";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="row">
+    <div class="col-md-6 col-xl-4 col-sm-6">
+        <div class="card">
+            <div class="product-grid6">
+                <div class="product-image6 p-5">
+                    <a href="shop-description.html">
+                        <img class="img-fluid br-7 w-100" src="~/assets/images/products/9.jpg" alt="img">
+                    </a>
+                </div>
+                <div class="card-body pt-0">
+                    <div class="product-content text-center">
+                        <h1 class="title fw-bold fs-6"><a href="shop-description.html">شیائومی مدل Redmi Note 13 Pro</a></h1>
+                        <div class="mb-2 text-warning">
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star-half-o text-warning"></i>
+                            <i class="fa fa-star-o text-warning"></i>
+                        </div>
+                        <div class="">
+                            <h8 class="title fw-bold fs-9 number-format">455325 تومان</h8>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="wishlist.html" class="btn btn-outline-primary mb-1">افزودن به سفارشات<i class="fe fe-shopping-cart mx-2 wishlist-icon"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 col-xl-4 col-sm-6">
+        <div class="card">
+            <div class="product-grid6">
+                <div class="product-image6 p-5">
+                    <a href="shop-description.html">
+                        <img class="img-fluid br-7 w-100" src="~/assets/images/products/10.jpg" alt="img">
+                    </a>
+                </div>
+                <div class="card-body pt-0">
+                    <div class="product-content text-center">
+                        <h1 class="title fw-bold fs-6"><a href="shop-description.html">اپل مدل iPhone 13 CH 256</a></h1>
+                        <div class="mb-2 text-warning">
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star-half-o text-warning"></i>
+                            <i class="fa fa-star-o text-warning"></i>
+                        </div>
+                        <div class="">
+                            <h8 class="title fw-bold fs-9 number-format">455325 تومان</h8>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="wishlist.html" class="btn btn-outline-primary mb-1">افزودن به سفارشات<i class="fe fe-shopping-cart mx-2 wishlist-icon"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 col-xl-4 col-sm-6">
+        <div class="card">
+            <div class="product-grid6">
+                <div class="product-image6 p-5">
+                    <a href="shop-description.html">
+                        <img class="img-fluid br-7 w-100" src="~/assets/images/products/4.jpg" alt="img">
+                    </a>
+                </div>
+                <div class="card-body pt-0">
+                    <div class="product-content text-center">
+                        <h1 class="title fw-bold fs-6"><a href="shop-description.html">اپل مدل iPhone 13 pro ZAA 128</a></h1>
+                        <div class="mb-2 text-warning">
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star-half-o text-warning"></i>
+                            <i class="fa fa-star-o text-warning"></i>
+                        </div>
+                        <div class="">
+                            <h8 class="title fw-bold fs-9 number-format">455325 تومان</h8>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="wishlist.html" class="btn btn-outline-primary mb-1">افزودن به سفارشات<i class="fe fe-shopping-cart mx-2 wishlist-icon"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 col-xl-4 col-sm-6">
+        <div class="card">
+            <div class="product-grid6">
+                <div class="product-image6 p-5">
+                    <a href="shop-description.html">
+                        <img class="img-fluid br-7 w-100" src="~/assets/images/products/8.jpg" alt="img">
+                    </a>
+                </div>
+                <div class="card-body pt-0">
+                    <div class="product-content text-center">
+                        <h1 class="title fw-bold fs-6"><a href="shop-description.html">سامسونگ مدل Galaxy A15 128</a></h1>
+                        <div class="mb-2 text-warning">
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star-half-o text-warning"></i>
+                            <i class="fa fa-star-o text-warning"></i>
+                        </div>
+                        <div class="">
+                            <h8 class="title fw-bold fs-9 number-format">455325 تومان</h8>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="wishlist.html" class="btn btn-outline-primary mb-1">افزودن به سفارشات<i class="fe fe-shopping-cart mx-2 wishlist-icon"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 col-xl-4 col-sm-6">
+        <div class="card">
+            <div class="product-grid6">
+                <div class="product-image6 p-5">
+                    <a href="shop-description.html">
+                        <img class="img-fluid br-7 w-100" src="~/assets/images/products/1.jpg" alt="img">
+                    </a>
+                </div>
+                <div class="card-body pt-0">
+                    <div class="product-content text-center">
+                        <h1 class="title fw-bold fs-6"><a href="shop-description.html">سامسونگ مدل Galaxy A35 128</a></h1>
+                        <div class="mb-2 text-warning">
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star-half-o text-warning"></i>
+                            <i class="fa fa-star-o text-warning"></i>
+                        </div>
+                        <div class="">
+                            <h8 class="title fw-bold fs-9 number-format">455325 تومان</h8>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="wishlist.html" class="btn btn-outline-primary mb-1">افزودن به سفارشات<i class="fe fe-shopping-cart mx-2 wishlist-icon"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 col-xl-4 col-sm-6">
+        <div class="card">
+            <div class="product-grid6">
+                <div class="product-image6 p-5">
+                    <a href="shop-description.html">
+                        <img class="img-fluid br-7 w-100" src="~/assets/images/products/6.jpg" alt="img">
+                    </a>
+                </div>
+                <div class="card-body pt-0">
+                    <div class="product-content text-center">
+                        <h1 class="title fw-bold fs-6"><a href="shop-description.html">سامسونگ مدل Galaxy A05 256</a></h1>
+                        <div class="mb-2 text-warning">
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star-half-o text-warning"></i>
+                            <i class="fa fa-star-o text-warning"></i>
+                        </div>
+                        <div class="">
+                            <h8 class="title fw-bold fs-9 number-format">455325 تومان</h8>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="wishlist.html" class="btn btn-outline-primary mb-1">افزودن به سفارشات<i class="fe fe-shopping-cart mx-2 wishlist-icon"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 col-xl-4 col-sm-6">
+        <div class="card">
+            <div class="product-grid6">
+                <div class="product-image6 p-5">
+                    <a href="shop-description.html">
+                        <img class="img-fluid br-7 w-100" src="~/assets/images/products/5.jpg" alt="img">
+                    </a>
+                </div>
+                <div class="card-body pt-0">
+                    <div class="product-content text-center">
+                        <h1 class="title fw-bold fs-6"><a href="shop-description.html">نوکیا مدل 1100</a></h1>
+                        <div class="mb-2 text-warning">
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star-half-o text-warning"></i>
+                            <i class="fa fa-star-o text-warning"></i>
+                        </div>
+                        <div class="">
+                            <h8 class="title fw-bold fs-9 number-format">455325 تومان</h8>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="wishlist.html" class="btn btn-outline-primary mb-1">افزودن به سفارشات<i class="fe fe-shopping-cart mx-2 wishlist-icon"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 col-xl-4 col-sm-6">
+        <div class="card">
+            <div class="product-grid6">
+                <div class="product-image6 p-5">
+                    <a href="shop-description.html">
+                        <img class="img-fluid br-7 w-100" src="~/assets/images/products/7.jpg" alt="img">
+                    </a>
+                </div>
+                <div class="card-body pt-0">
+                    <div class="product-content text-center">
+                        <h1 class="title fw-bold fs-6"><a href="shop-description.html">سامسونگ مدل Galaxy A55 512</a></h1>
+                        <div class="mb-2 text-warning">
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star-half-o text-warning"></i>
+                            <i class="fa fa-star-o text-warning"></i>
+                        </div>
+                        <div class="">
+                            <h8 class="title fw-bold fs-9 number-format">455325 تومان</h8>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="wishlist.html" class="btn btn-outline-primary mb-1">افزودن به سفارشات<i class="fe fe-shopping-cart mx-2 wishlist-icon"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 col-xl-4 col-sm-6">
+        <div class="card">
+            <div class="product-grid6">
+                <div class="product-image6 p-5">
+                    <a href="shop-description.html">
+                        <img class="img-fluid br-7 w-100" src="~/assets/images/products/3.jpg" alt="img">
+                    </a>
+                </div>
+                <div class="card-body pt-0">
+                    <div class="product-content text-center">
+                        <h1 class="title fw-bold fs-6"><a href="shop-description.html">سامسونگ مدل Galaxy S24 512</a></h1>
+                        <div class="mb-2 text-warning">
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star text-warning"></i>
+                            <i class="fa fa-star-half-o text-warning"></i>
+                            <i class="fa fa-star-o text-warning"></i>
+                        </div>
+                        <div>
+                            <h8 class="title fw-bold fs-9 number-format">455325 تومان</h8>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="wishlist.html" class="btn btn-outline-primary mb-1">افزودن به سفارشات<i class="fe fe-shopping-cart mx-2 wishlist-icon"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mb-5">
+        <div class="float-end">
+            <ul class="pagination ">
+                <li class="page-item page-prev disabled">
+                    <a class="page-link" href="javascript:void(0)" tabindex="-1">Prev</a>
+                </li>
+                <li class="page-item active"><a class="page-link" href="javascript:void(0)">1</a></li>
+                <li class="page-item"><a class="page-link" href="javascript:void(0)">2</a></li>
+                <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
+                <li class="page-item"><a class="page-link" href="javascript:void(0)">4</a></li>
+                <li class="page-item"><a class="page-link" href="javascript:void(0)">5</a></li>
+                <li class="page-item page-next">
+                    <a class="page-link" href="javascript:void(0)">Next</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </div>
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <title>Products</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+</head>
+<body>
+    <h2>Products List</h2>
+    <ul id="product-list"></ul>
+    <input type="text" id="new-product" placeholder="Enter new product" />
+    <button id="add-product">Add Product</button>
+
+    <script>
+        $(document).ready(function () {
+            // Load products from API
+            $.get("https://localhost:7281/api/Products", function (data) {
+                $.each(data, function (index, product) {
+                    $("#product-list").append("<li>" + product + "</li>");
+                });
+            });
+
+            // Add new product
+            $("#add-product").click(function () {
+                var newProduct = $("#new-product").val();
+                $.ajax({
+                    url: "https://localhost:7281/api/Products",
+                    type: "POST",
+                    data: JSON.stringify(newProduct),
+                    contentType: "application/json",
+                    success: function (data) {
+                        $("#product-list").empty();
+                        $.each(data, function (index, product) {
+                            $("#product-list").append("<li>" + product + "</li>");
+                        });
+                    }
+                });
+            });
+        });
+    </script>
+</body>
+</html>
