[Fix] Remark Extra entities

--- a/Sadad/UI/Views/Home/Index.cshtml
+++ b/Sadad/UI/Views/Home/Index.cshtml
@@ -263,7 +263,7 @@
             </div>
         </div>
     </div>
-    <div class="mb-5">
+@*    <div class="mb-5">
         <div class="float-end">
             <ul class="pagination ">
                 <li class="page-item page-prev disabled">
@@ -280,10 +280,11 @@
             </ul>
         </div>
     </div>
+*@
 </div>
 
 
-
+@*
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -326,3 +327,4 @@
     </script>
 </body>
 </html>
+*@
