[Add] Migrate From Local Project to Git project

--- a/Sadad/UI/Views/Home/CommitOrder.cshtml
+++ b/Sadad/UI/Views/Home/CommitOrder.cshtml
@@ -8,7 +8,7 @@
                 <h1 class="card-title"> <i class="fa fa-check-square-o text-success"></i></h1>
             </div>
             <div class="card-body text-center">
-                <h5 class="card-title text-success">سفارش شما با کد رهگیری 2255 ثبت شد</h5>
+                <h5 class="card-title text-success">سفارش شما با کد رهگیری @ViewData["OrderId"] ثبت شد</h5>
                 <p class="card-text">از اینکه اعتماد شما بی نهایت سپاسگزارم.</p>
                 <a class="btn btn-secondary" asp-area="" asp-controller="Home" asp-action="products">بازگشت به انتخاب محصول</a>
             </div>
