--- a/Sadad/UI/Views/Shared/_Layout.cshtml
+++ b/Sadad/UI/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="fa">
+<html lang="fa" dir="rtl">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -25,7 +25,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Orders"><span class="badge bg-danger">4</span> سفارشات من</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Orders"><span id="open-order-count" class="badge bg-danger">@ViewData["OpenOrderCount"]</span> سفارشات من</a>
                         </li>
                     </ul>
                 </div>
@@ -44,7 +44,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            حامد ضیائی - 1403
+            دی ماه - 1403
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
@@ -54,5 +54,6 @@
     <!--- numberformat -->
     <script src="~/assets/js/numberformat.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
+    @await Component.InvokeAsync("Notyf")
 </body>
 </html>
