--- a/Sadad/UI/Views/Home/Orders.cshtml
+++ b/Sadad/UI/Views/Home/Orders.cshtml
@@ -1,4 +1,8 @@
-﻿@{
+﻿@Html.AntiForgeryToken()
+@using API.DTOs;
+@model IEnumerable<OrderListGroupDto>
+@{
+    int Row = 1;
     ViewData["Title"] = "سفارشات من";
 }
 <div class="row">
@@ -13,6 +17,7 @@
                         <thead>
                             <tr class="border-top bg-success text-white">
                                 <th class="text-center">ردیف</th>
+                                <th class="text-center">کدکالا</th>
                                 <th class="text-center">کالا</th>
                                 <th class="text-center">فی</th>
                                 <th class="text-center">تعداد</th>
@@ -21,66 +26,23 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td class="text-center">1</td>
-                                <td>شیائومی مدل Redmi Note 13 Pro</td>
-                                <td class="number-format">455325</td>
-                                <td class="text-center">1</td>
-                                <td class="title fw-bold fs-9 number-format">455325</td>
-                                <td>
-                                    <div class=" d-flex g-2">
-                                        <a class="btn btn-outline-danger "><span class="bi bi-trash fs-16"></span></a>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="text-center">2</td>
-                                <td>شیائومی مدل Redmi Note 13 Pro</td>
-                                <td class="number-format">455325</td>
-                                <td class="text-center">1</td>
-                                <td class="title fw-bold fs-9 number-format">455325</td>
-                                <td>
-                                    <div class=" d-flex g-2">
-                                        <a class="btn btn-outline-danger "><span class="bi bi-trash fs-16"></span></a>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="text-center">3</td>
-                                <td>شیائومی مدل Redmi Note 13 Pro</td>
-                                <td class="number-format">455325</td>
-                                <td class="text-center">1</td>
-                                <td class="title fw-bold fs-9 number-format">455325</td>
-                                <td>
-                                    <div class=" d-flex g-2">
-                                        <a class="btn btn-outline-danger "><span class="bi bi-trash fs-16"></span></a>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="text-center">4</td>
-                                <td>شیائومی مدل Redmi Note 13 Pro</td>
-                                <td class="number-format">455325</td>
-                                <td class="text-center">1</td>
-                                <td class="title fw-bold fs-9 number-format">455325</td>
-                                <td>
-                                    <div class=" d-flex g-2">
-                                        <a class="btn btn-outline-danger "><span class="bi bi-trash fs-16"></span></a>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="text-center">5</td>
-                                <td>شیائومی مدل Redmi Note 13 Pro</td>
-                                <td class="number-format">455325</td>
-                                <td class="text-center">1</td>
-                                <td class="title fw-bold fs-9 number-format">455325</td>
-                                <td>
-                                    <div class=" d-flex g-2">
-                                        <a class="btn btn-outline-danger "><span class="bi bi-trash fs-16"></span></a>
-                                    </div>
-                                </td>
-                            </tr>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td class="text-center">@Row</td>
+                                    <td>@item.ProductId</td>
+                                    <td>@item.ProductName</td>
+                                    <td class="number-format">@item.Price</td>
+                                    <td class="text-center">@item.Quantity</td>
+                                    <td class="title fw-bold fs-9 number-format">@item.Total</td>
+                                    <td>
+                                        <div class=" d-flex g-2">
+                                            <a asp-controller="Home" asp-action="RemoveOrderItem" asp-route-OrderId="@item.OrderId" asp-route-ProductId="@item.ProductId" class="btn btn-outline-danger "><span class="bi bi-trash fs-16"></span></a>
+                                        </div>
+                                    </td>
+                                </tr>
+                                Row++;
+                            }
                         </tbody>
                     </table>
                 </div>
@@ -97,12 +59,16 @@
                     <table class="table table-borderless text-nowrap mb-0">
                         <tbody>
                             <tr>
+                                <td class="text-start">شماره سفارش</td>
+                                <td class="text-end title fw-bold fs-9 number-format"><span class="fw-bold  ms-auto">@Model.FirstOrDefault().OrderId</span></td>
+                            </tr>
+                            <tr>
                                 <td class="text-start">تعداد اقلام</td>
-                                <td class="text-end title fw-bold fs-9 number-format"><span class="fw-bold  ms-auto">5</span></td>
+                                <td class="text-end title fw-bold fs-9 number-format"><span class="fw-bold  ms-auto">@ViewData["OrderCount"]</span></td>
                             </tr>
                             <tr>
                                 <td class="text-start">مجموع مبلغ سفارش</td>
-                                <td class="text-end title fw-bold fs-9 number-format"><span class="fw-bold text-success">323265 ریال</span></td>
+                                <td class="text-end title fw-bold fs-9 number-format"><span class="fw-bold text-success">@ViewData["OrderSubTotal"] ریال</span></td>
                             </tr>
                         </tbody>
                     </table>
@@ -110,12 +76,13 @@
             </div>
             <div class="card-footer">
                 <form asp-controller="Home" asp-action="CommitOrder" method="post">
+                    <input type="hidden" id="OrderId" asp-for="FirstOrDefault().OrderId" />
                     <div class="btn-list">
-                        <button type="submit" method="post" class="btn btn-success">تکمیل فرایند</button>
+                        <button type="submit" method="post" action="CommitOrder" class="btn btn-success">تکمیل فرایند</button>
                         <a class="btn btn-secondary" asp-area="" asp-controller="Home" asp-action="products">بازگشت به انتخاب محصول</a>
                     </div>
                 </form>
             </div>
         </div>
     </div>
-</div>
+</div>  
