[Fix] Remove Shared Project amd Migrate DTO to Application Layer

--- a/Sadad/UI/Views/Home/Products.cshtml
+++ b/Sadad/UI/Views/Home/Products.cshtml
@@ -1,5 +1,5 @@
 ﻿@Html.AntiForgeryToken()
-@using Shared.DTOs;
+@using Application.DTOs
 @model IEnumerable<ProductDto>
 @{
     ViewData["Title"] = "فرم ثبت سفارشات";
