--- a/Sadad/UI/Views/Home/Orders.cshtml
+++ b/Sadad/UI/Views/Home/Orders.cshtml
@@ -1,5 +1,5 @@
 ﻿@Html.AntiForgeryToken()
-@using Shared.DTOs;
+@using Application.DTOs
 @model IEnumerable<OrderListGroupDto>
 @{
     int Row = 1;
