--- a/Sadad/UI/Views/Shared/Error.cshtml
+++ b/Sadad/UI/Views/Shared/Error.cshtml
@@ -1,25 +1,16 @@
-﻿@model ErrorViewModel
-@{
-    ViewData["Title"] = "Error";
+﻿@{
+    ViewData["Title"] = "خطا";
 }
-
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
-
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+<div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12">
+        <div class="card cart">
+            <div class="card-header text-center">
+                <h1 class="card-title"> <i class="fa fa-times-rectangle-o text-danger"></i></h1>
+            </div>
+            <div class="card-body text-center">
+                <h5 class="card-title text-danger">شما به صفحه خطا منتقل شده اید.</h5>
+                <p class="card-text">@ViewData["ErrorDesc"]</p>
+            </div>
+        </div>
+    </div>
+</div>
